--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -18,7 +18,7 @@ $dark-orange: #cc6300;
 $yellow: #fffd47;
 $light-yellow: #fafad2;
 
-$green: #00c92c;
+$green: #0eb833;
 
 $warning-color: $orange;
 $error-color: $red;
