--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -22,6 +22,7 @@
                 </li>
                 <li>
                     <label for="identifier">Identifier</label>
+                    <small class="additional">This identifier is used to determine permissions. Modify with care.</small>
                     <input type="text" name="identifier" id="identifier" maxlength="24" required value="{{ form.identifier }}" class="text-input t50">
                 </li>
 
