--- a/app/templates/repository/encrypted/add.encrypted.property.twig
+++ b/app/templates/repository/encrypted/add.encrypted.property.twig
@@ -56,8 +56,8 @@
                             {% set checked = ' checked' %}
                         {% endif %}
                         <li>
-                            <input id="environment-all" type="radio" name="environment" value="all"{{ checked }}>
-                            <label for="environment-all">All</label>
+                            <input id="environment-global" type="radio" name="environment" value="global"{{ checked }}>
+                            <label for="environment-global">Global (Available in all environments)</label>
                         </li>
                     </ul>
                 </li>
