--- a/app/templates/repository/encrypted/encrypted.properties.twig
+++ b/app/templates/repository/encrypted/encrypted.properties.twig
@@ -30,7 +30,7 @@
                         {% if property.environment %}
                             {{ property.environment.key }}
                         {% else %}
-                            ALL
+                            Global (Available in all environments)
                         {% endif %}
                     </td>
                     {% if isRepoAdmin %}
