Update copy text

--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -102,7 +102,7 @@
 
             <dt class="split--left__title">Start</dt>
             <dd class="split--left__value js-push-start">
-                {{ push.start|timepoint('M j, Y g:i A') }}
+                {{ push.start|reldate }}
             </dd>
 
             <dt class="split--left__title">End</dt>
