Minor copy change

--- a/app/templates/repository/encrypted/encrypted.properties.twig
+++ b/app/templates/repository/encrypted/encrypted.properties.twig
@@ -45,8 +45,8 @@
         <p>
             Encrypted properties are immutable. To change the value of a property: Remove it then add it again.<br><br>
 
-            If a property is set for both <strong>ALL</strong> environments and a specific environment, the environment-specific
-            property will override the <strong>ALL</strong> environment property.
+            If a property is set for both <strong>Global</strong> and a specific environment, the environment-specific
+            property will override the <strong>Global</strong> property.
         </p>
     {% else %}
         <p>There are no encrypted properties for this repository.</p>
