Remove groups page, redirect to repositories

--- a/app/templates/group/admin.add.twig
+++ b/app/templates/group/admin.add.twig
@@ -41,7 +41,7 @@
                 <input class="btn" type="submit" value="Add Group">
 
                 {# secondary actions #}
-                <a class="secondary-action" href="{{ urlFor('groups') }}">Cancel</a>
+                <a class="secondary-action" href="{{ urlFor('repositories') }}">Cancel</a>
             </div>
         </form>
     </div>
