--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -86,7 +86,7 @@
             <strong>Determine what group your application should exist in within HAL 9000.</strong>
             <p>
                 This is commonly a team or business area name. You can see the ones that already exist by looking
-                at the <a href="{{ urlFor('groups') }}">Groups Page</a>. If you need to create a new group, you'll
+                at the <a href="{{ urlFor('repositories') }}">Repositories Page</a>. If you need to create a new group, you'll
                 need the following information.
 
                 <ul>
