--- a/app/templates/partials/layout.messages.twig
+++ b/app/templates/partials/layout.messages.twig
@@ -12,6 +12,6 @@
 {# GLOBAL MESSAGE #}
 {% block messages %}
     {% if globalMessage() %}
-        {{ macros.alert('info', 'Alert', globalMessage(), true) }}
+        {{ globalMessage()|raw }}
     {% endif %}
 {% endblock %}
