Make table blue a legit color

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -7,6 +7,7 @@ $light-grey: #e5e5e5;
 $white: #ffffff;
 
 $bright-blue: #4cb1dd;
+$slightly-less-bright-blue : #357793;
 $blue: #236298;
 $dark-blue: #01002b;
 
