Add github permission change instructions to help page.

--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -16,6 +16,7 @@
                 <li><a href="#permission">Who should I contact for support or permission changes?</a></li>
                 <li><a href="#bugs">Who should I contact regarding bugs or feature requests?</a></li>
                 <li><a href="#training">Are there any training sessions available?</a></li>
+                <li><a href="{{ urlFor('help.githubpermissions') }}">I'm a Github repository collaborator but am unable to build or push. Help!</a></li>
             </ul>
         </li>
 
