--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,7 @@
 @import "partials/grid";
 @import "partials/global";
 @import "partials/icons";
+@import "partials/images";
 @import "partials/cards";
 @import "partials/halheader";
 @import "partials/drop-down";
